--- a/two-factor-auth/src/main/resources/application.yaml
+++ b/two-factor-auth/src/main/resources/application.yaml
@@ -16,3 +16,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+  flyway:
+    enabled: true
+    url: jdbc:mysql://localhost:3306/two-factor-auth
+    user: root
+    password: root
