--- a/two-factor-auth/pom.xml
+++ b/two-factor-auth/pom.xml
@@ -64,6 +64,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>7.50.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
