Added Spring Security - JWT

--- a/two-factor-auth/src/main/resources/application.yaml
+++ b/two-factor-auth/src/main/resources/application.yaml
@@ -35,5 +35,9 @@ spring:
       starttls.enable: true
       ssl.trust: smtp.office365.com
 
+jwt:
+  expiration: 7200 #seconds
+  secret: SuperSecretKey
+
 mail:
   url: http://localhost:4200
